[package]
name = "minidfs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.17"
fs2 = "0.4.3"
rand = "0.8.5"
md5 = "0.7.0"
uuid = { version = "1.1.2", features = [ 
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rusqlite = {version = "0.27.0", features = ["bundled"]}
rustyline = "9.1.2"
shellwords = "1.1.0"
byte-unit = "4.0.14"
tabled = "0.7.0"
hex = "0.4.3"
itertools = "0.10.3"
path-absolutize = "3.0.13"
scopeguard = "1.1.0"

[profile.release]
strip = "debuginfo"